--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -25,12 +25,12 @@
 .landing-logo {
     position: absolute;
     top: 15px;
-    left: 30px;
+    left: 15px;
     font-family: 'creamy';
     font-family: 'quenda';
     font-size: 24px;
     font-weight: bolder;
-    width: 46px;
+    width: 36px;
 }
 
 .landing-logo img {
@@ -193,7 +193,8 @@
     width: 100%;
     height: 100%;
     background: #1a59c3;
-    border-radius: 100px;
+    background: linear-gradient(45deg,#1a59c3,#1a85c3);
+    /* border-radius: 100px; */
 }
 
 .landing-connexion button:hover {
