--- a/public/css/src/settings/settings.css
+++ b/public/css/src/settings/settings.css
@@ -29,8 +29,8 @@
     font-size: 12px;
     font-weight: 500;
     text-align: center;
-    background: rgba(246, 60, 93, 0.06);
-    color: #f63c5d;
+    background: rgba(174, 102, 196, 0.05);
+    color: #a14cbb;
     padding: 10px 0;
     border-radius: 10px;
     font-family: 'quenda';
