--- a/public/css/lib/fontello/css/fontello-codes.css
+++ b/public/css/lib/fontello/css/fontello-codes.css
@@ -122,3 +122,4 @@
 .icon-hashtag-empty:before { content: '\e878'; } /* '' */
 .icon-chat-bubble:before { content: '\e879'; } /* '' */
 .icon-plus-fat:before { content: '\e87a'; } /* '' */
+.icon-menu-empty:before { content: '\e87b'; } /* '' */
