--- a/public/css/lib/fontello/css/fontello.css
+++ b/public/css/lib/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?33393452');
-  src: url('../font/fontello.eot?33393452#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?33393452') format('woff2'),
-       url('../font/fontello.woff?33393452') format('woff'),
-       url('../font/fontello.ttf?33393452') format('truetype'),
-       url('../font/fontello.svg?33393452#fontello') format('svg');
+  src: url('../font/fontello.eot?18520792');
+  src: url('../font/fontello.eot?18520792#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?18520792') format('woff2'),
+       url('../font/fontello.woff?18520792') format('woff'),
+       url('../font/fontello.ttf?18520792') format('truetype'),
+       url('../font/fontello.svg?18520792#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?33393452#fontello') format('svg');
+    src: url('../font/fontello.svg?18520792#fontello') format('svg');
   }
 }
 */
@@ -178,3 +178,4 @@
 .icon-hashtag-empty:before { content: '\e878'; } /* '' */
 .icon-chat-bubble:before { content: '\e879'; } /* '' */
 .icon-plus-fat:before { content: '\e87a'; } /* '' */
+.icon-menu-empty:before { content: '\e87b'; } /* '' */
