--- a/public/css/src/chat/chat_inview.css
+++ b/public/css/src/chat/chat_inview.css
@@ -72,7 +72,7 @@
     height: 42px;
 }
 
-.chat-inview-header .bubble {background: #1a59c3;border: none;width: 18px;height: 18px;border: 2px solid white;top: -2px;right: -4px;}
+.chat-inview-header .bubble {background: #1a59c3;border: none;width: 18px;height: 18px;border: 2px solid white;top: -2px;right: -4px;background: linear-gradient(45deg,#fe685c, #ed105d);}
 
 .chat-inview__icon:hover {
     background: #f5f5f5;
@@ -431,7 +431,7 @@
     bottom: 0;
     width: 100%;
     background: white;
-    z-index: 1;
+    z-index: 1000;
     flex-shrink: 0;
 }
 
@@ -552,7 +552,7 @@
 .chat-inview-seen-by i {
     margin-left: 2px;
 }
-
+ 
 .chat-inview-footer button {
     flex-shrink: 0;
     width: 100px;
@@ -567,4 +567,5 @@
     height: 40px;
     border-radius: 44px;
     background: #1a59c3;
+    text-align: center;
 }
