--- a/public/css/src/settings/settings.css
+++ b/public/css/src/settings/settings.css
@@ -75,7 +75,7 @@
     padding: 10px 50px;
     color: #1a59c3;
     font-size: 12px;
-    border: 1px dashed;
+    border: 1px solid;
     font-weight: 600;
     border-radius: 4px;
     margin-left: auto;
