--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -120,20 +120,14 @@
       <!-- header -->
       <header class="app-header">
         <div class="app-header__splitter"></div>
-        <div class="app-header-titles">
-          <div class="app-header__title" data-link="menu" data-lid="nav_menu_title"></div>
-          <div class="app-header__title" data-link="map" data-lid="nav_map_title"></div>
-          <div class="app-header__title" data-link="search" data-lid="nav_search_title"></div>
-        </div>
-        <div class="app-header__logo nonei">
-          <img src="/img/logo/5.png" width="40"/>
-        </div>
+        <div class="app-header__corner x--left"></div>
+        <div class="app-header__corner x--right"></div>
         <nav class="app-nav">
           <ul>
             <li class="app__menu-item x--menu" data-link="menu">
               <a href="#menu">
-                <i class="app__menu-icon icon icon-menu-app x--filled"></i>
-                <i class="app__menu-icon icon icon-menu-app x--empty"></i>
+                <i class="app__menu-icon icon icon-profile-rounded x--filled"></i>
+                <i class="app__menu-icon icon icon-profile-rounded-empty x--empty"></i>
               </a>
             </li>
             <li class="app__menu-item x--map" data-link="map">
@@ -142,12 +136,12 @@
                 <i class="app__menu-icon icon icon-location-empty x--empty"></i>
               </a>
             </li>
-            <li class="app__menu-item x--search" data-link="search">
+           <!--  <li class="app__menu-item x--search" data-link="search">
               <a href="#search">
                 <i class="app__menu-icon icon icon-members x--filled"></i>
                 <i class="app__menu-icon icon icon-members-empty x--empty"></i>
               </a>
-            </li>
+            </li> -->
             <li class="app__menu-item x--notifications x--right">
             <a href="#notifications">
               <i class="app__menu-icon icon icon-bell x--filled"></i>
@@ -208,16 +202,6 @@
           </div>
           <div class="menu-item__bar"></div>
         </li>
-        <li class="menu-item x--friends" data-link="friends">
-          <div class="menu-item__body">
-            <div class="menu-item__icon x--round-icon">
-              <i class="icon icon-users x--filled"></i>
-              <i class="icon icon-users-empty x--empty"></i>
-            </div>
-            <h3 data-lid="menu_friends"></h2>
-          </div>
-          <div class="menu-item__bar"></div>
-        </li>
         <li class="menu-item x--settings" data-link="settings">
           <div class="menu-item__body">
             <div class="menu-item__icon">
@@ -259,7 +243,7 @@
                 <i class="icon icon-check"></i>
               </div>
               <div class="action__cancel x--round-icon">
-                <i class="icon icon-cancel"></i>
+                <i class="icon icon-cross-fat"></i>
               </div>
             </div>
             <div class="me-item-body">
@@ -280,7 +264,7 @@
                 <i class="icon icon-check"></i>
               </div>
               <div class="action__cancel x--round-icon">
-                <i class="icon icon-cancel"></i>
+                <i class="icon icon-cross-fat"></i>
               </div>
             </div>
             <div class="me-item-body">
@@ -311,7 +295,7 @@
                 <i class="icon icon-check"></i>
               </div>
               <div class="action__cancel x--round-icon">
-                <i class="icon icon-cancel"></i>
+                <i class="icon icon-cross-fat"></i>
               </div>
             </div>
             <div class="me-item-body">
@@ -332,7 +316,7 @@
                 <i class="icon icon-check"></i>
               </div>
               <div class="action__cancel x--round-icon">
-                <i class="icon icon-cancel"></i>
+                <i class="icon icon-cross-fat"></i>
               </div>
             </div>
             <div class="me-item-body">
@@ -353,7 +337,7 @@
                 <i class="icon icon-check"></i>
               </div>
               <div class="action__cancel x--round-icon">
-                <i class="icon icon-cancel"></i>
+                <i class="icon icon-cross-fat"></i>
               </div>
             </div>
             <div class="me-item-body">
@@ -425,7 +409,7 @@
                 <i class="icon icon-check"></i>
               </div>
               <div class="action__cancel x--round-icon">
-                <i class="icon icon-cancel"></i>
+                <i class="icon icon-cross-fat"></i>
               </div>
             </div>
           </div>
@@ -644,7 +628,7 @@
   <!-- Chat end -->
 
      <!-- Search start -->
-    <section class="app-section x--search" data-link="search">
+    <section class="app-section x--search nonei" data-link="search">
       
       <div class="app-subheader x--search">
         <div class="search__title">
