--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -150,6 +150,7 @@ span.be-dates__count {
 .slide.x--before .slide__close {
     color: white;
     text-shadow: none;
+    color: #1a59c3;
 }
 
 .be-inview {
