--- a/public/css/src/notifications/notifications.css
+++ b/public/css/src/notifications/notifications.css
@@ -40,12 +40,12 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: row;
-    height: 74px;
+    height: 84px;
     color: #191919;
     width: 100%;
     margin: 2px auto;
     box-sizing: border-box;
-    padding: 0 16px 0;
+    padding: 0px 16px 0px;
     border-radius: 0px;
     cursor: pointer;
     position: relative;
